#15 - Build Trails CRUD — Routes & Controller
